qis-compiler/rust/snapshots/selene_hugr_qis_compiler__gpu__test__gpu_codegen@pre-mem2reg@llvm21_lookup_by_name.snap
---
source: qis-compiler/rust/gpu.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@gpu_cache_is_set_function_id_example_function = thread_local global i8 0
@gpu_cache_function_id_example_function = thread_local global i64 0
@gpu_validated = thread_local global i8 0
@no_gpu_error = private unnamed_addr constant [27 x i8] c"No error message available\00", align 1
@function_name = private unnamed_addr constant [17 x i8] c"example_function\00", align 1

define private i64 @_hl.main.1({} %0) {
alloca_block:
  %"0" = alloca i64, align 8
  %"2_0" = alloca {}, align 8
  %"4_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store {} %0, ptr %"2_0", align 1
  %"2_01" = load {}, ptr %"2_0", align 1
  %function_id_call = call i64 @gpu_function_id_example_function()
  store i64 %function_id_call, ptr %"4_0", align 4
  %"4_02" = load i64, ptr %"4_0", align 4
  store i64 %"4_02", ptr %"0", align 4
  %"03" = load i64, ptr %"0", align 4
  ret i64 %"03"
}

; Function Attrs: noinline
define i64 @gpu_function_id_example_function() #0 {
entry:
  %function_id = load i8, ptr @gpu_cache_is_set_function_id_example_function, align 1
  %needs_lookup = icmp eq i8 %function_id, 0
  br i1 %needs_lookup, label %lookup, label %read_cache

lookup:                                           ; preds = %entry
  call void @run_gpu_validation()
  %function_id_ptr = alloca i64, align 8
  %function_id_call = call i8 @gpu_get_function_id(ptr @function_name, ptr %function_id_ptr)
  call void @validate_gpu_response(i8 %function_id_call)
  %function_id2 = load i64, ptr %function_id_ptr, align 4
  store i64 %function_id2, ptr @gpu_cache_function_id_example_function, align 4
  store i8 1, ptr @gpu_cache_is_set_function_id_example_function, align 1
  ret i64 %function_id2

read_cache:                                       ; preds = %entry
  %function_id1 = load i64, ptr @gpu_cache_function_id_example_function, align 4
  ret i64 %function_id1
}

; Function Attrs: noinline
define void @run_gpu_validation() #0 {
entry:
  %validated = load i8, ptr @gpu_validated, align 1
  %already_validated = icmp ne i8 %validated, 0
  br i1 %already_validated, label %done, label %validate

done:                                             ; preds = %entry
  ret void

validate:                                         ; preds = %entry
  %validate_call = call i8 @gpu_validate_api(i64 0, i64 1, i64 0)
  call void @validate_gpu_response(i8 %validate_call)
  store i8 1, ptr @gpu_validated, align 1
  ret void
}

declare i8 @gpu_validate_api(i64, i64, i64)

; Function Attrs: noinline
define void @validate_gpu_response(i8 %0) #0 {
entry:
  %success = icmp ne i8 %0, 0
  br i1 %success, label %ok, label %err

ok:                                               ; preds = %entry
  ret void

err:                                              ; preds = %entry
  call void @gpu_error_handler()
  unreachable
}

; Function Attrs: noinline
define void @gpu_error_handler() #0 {
entry:
  %error_message = call ptr @gpu_get_error()
  %is_null = icmp eq ptr %error_message, null
  %error_message_nonnull = select i1 %is_null, ptr @no_gpu_error, ptr %error_message
  call void @panic_str(i32 70002, ptr %error_message_nonnull)
  unreachable
}

declare ptr @gpu_get_error()

; Function Attrs: noreturn
declare void @panic_str(i32, ptr) #1

declare i8 @gpu_get_function_id(ptr, ptr)

attributes #0 = { noinline }
attributes #1 = { noreturn }
